# OptiFrame

./: Ability.cpp  Ability.hpp  CMakeLists.txt  Mod.cpp  Mod.h  README.md  Warframe.cpp  Warframe.hpp  WeaponAttribute.cpp  WeaponAttribute.hpp  buffer.txt  enemy_data.py  main.cpp  modding_data.py  truc.py  warframe_damage_calculation.py  weapon_data.py
include/: Ability.cpp  Ability.hpp  Arcane.cpp  Arcane.hpp  Mod.cpp  Mod.hpp  Warframe.cpp  Warframe.hpp  WeaponAttribute.cpp  WeaponAttribute.hpp  pocketlzma_program.cpp  usefullFunction.cpp  usefullFunction.hpp
